@@ -19,6 +19,7 @@ Andreas Streichardt
 Shiran Pasternak
 Bernd Jaenichen
 Jon Strabala
+Chen Hang
 
 
 Many users have identified bugs and suggested fixes, their names are
